# waterscript

./: .clang  .gitignore  CMakeLists.txt  README.md  VM.md
cli/: main.c
headers/: alloc.h  bytecode.h  common.h  compiled.h  compiler.h  context.h  exec.h  gen.h  lexer.h  parser.h  pool.h  queue.h  test.h  utf8.h  wval.h
jsc/: README.md  acorn-walk.d.ts  build.js  bytecode_c.ts  c.ts  package.json  rollup.config.js  tsconfig.json
jsc/src/: buffer.d.ts  buffer.polyfill.ts  buffer.ts  bytecode.ts  compiler.ts  constant_pool.ts  context.ts  dump.ts  gen.ts  labels.ts  main.ts  play.ts  scope.ts  text_encoding.ts  util.ts  visitor.ts  writer.ts
jsc/test/: buffer.ts  call.ts  do-while.ts  for.ts  if.ts  index.ts  literals.ts  object.ts  operations.ts  switch.ts  util.ts  vars.ts  while.ts
jsc/vm/: call.ts  compiler.ts  cs.ts  data.ts  ds.ts  dump.ts  ecma.ts  main.ts  obj.ts  scope.ts  timer.ts  util.ts  vm.ts
lib/: context.c  gen.c  lexer.c  parser.c  pool.c  wval.c
test/: constant_pool.c  test_runner.c
vm/: alloc.c  bytecode.c  common.c  context.c  exec.c  main.c  table.c  utf8.c  wval.c
